@@ -1,3 +1,5 @@
+- Improvement: Summary can be created as soon as lesson starts 
+
 32.10.4 (23-03-2022)
 - Bug Fix: External curriculum groups should not be considered for conclusion purposes
 
@@ -8,7 +10,7 @@
 - Refactor: Deprecate IAcademicTreasuryEvent::getExemptedAmount, which will be replaced by IAcademicTreasuryEvent::getNetExemptedAmount
 
 32.10.1 (24-02-2022)
--Improvement: Added dates to DegreeOfficialPublication
+- Improvement: Added dates to DegreeOfficialPublication
 
 32.10.0 (16-02-2022)
 - Bug fix: Get curricular rules from curriculum module shouldn't reuse group rules result
